# FATE_JZLab

./: .gitignore  README.md
federatedml/ABY/CPP/: CMakeLists.txt
federatedml/ABY/CPP/src/add_and_mul_operator/: CMakeLists.txt  add_and_mul_operator.cpp  add_and_mul_operator.h
federatedml/ABY/CPP/src/add_and_mul_operator/common/: circuit.cpp  circuit.h
federatedml/ABY/CPP/src/millionaire_prob_test/: CMakeLists.txt  FATE_ABY_millionaire_prob_test.cpp  FATE_ABY_millionaire_prob_test.h
federatedml/ABY/CPP/src/test/: CMakeLists.txt  client_test.cpp  client_test.h  relu_conversion_test.cpp  relu_conversion_test.h  server_test.cpp  server_test.h  share_conversion_test.cpp  share_conversion_test.h
federatedml/ABY/CPP/src/test/common/: test_const.cpp  test_const.h
federatedml/ABY/aby_secureprotol/: __init__.py  aby_fixedpoint.py  encrypt.py  encrypt_mode.py  fate_paillier.py
federatedml/ABY/linear_model/: linear_model_base.py
federatedml/ABY/millionaire_prob_test/: aby_millionaire_prob_test.py
federatedml/ABY/operator/: constant.py  vector_operator.py  vector_operator64.py
federatedml/ABY/test/: a_test.py  aby_test.py
federatedml/ABY/vector_operator_test/: aby_vector_add_test.py  aby_vector_mul_test.py  aby_vector_operator_base.py  test_client.py  test_client64.py  test_server.py  test_server64.py
federatedml/components/: a_test.py  aby_hetero_sshe_linr.py  aby_millionaire_prob_test.py  aby_vector_add_test.py  aby_vector_mul_test.py  data_enhancement.py
federatedml/data_enhancement/: GAN.py  data_enhancement.py  psg_v1.0.py
federatedml/param/: a_test_param.py  aby_glm_param.py  aby_hetero_sshe_linr_param.py  aby_millionaire_prob_test_param.py  aby_vector_operator_test_param.py  data_enhancement.py
test/ABY/: README.md
test/ABY/add_and_mul_operator/: add_and_mul_operator_test_conf.json  add_and_mul_operator_test_dsl.json  generate_data.py  upload_data_guest.py  upload_data_host.py
test/ABY/data/: hetero_sshe_linr_test_guest.csv  hetero_sshe_linr_test_host.csv  vector_add_and_mul_test_guest.csv
test/ABY/doc/: ABY_big_integer.md  ABY_millionare.md  ABY_secureprotol.md  README.md
test/ABY/hetero_sshe_linr_test/: generate_data.py  hetero_sshe_linr_test_conf.json  hetero_sshe_linr_test_dsl.json  upload_data_guest.py  upload_data_host.py
test/ABY/millionaire_prob_test/: millionaire_prob_test_conf.json  millionaire_prob_test_dsl.json  upload_data_guest.py  upload_data_host.py
test/FATE_ARCHITECTURE/: README.md
test/FATE_ARCHITECTURE/FATE_FLOW_server_about/: FATE_flow_server_apps.md
test/FATE_ARCHITECTURE/FATE_client/: FATE_flow_client.md  FATE_pipeline_python_api.md
test/FATE_ARCHITECTURE/FATE_communication_analyze/: FATE_communication_analyze.md
test/FATE_ARCHITECTURE/FATE_component_about/: FATE_component_run_analyze_in_detail.md  FATE_hetero_sshe_linear_component_analyze.md  fate_component_call_chain.md  fate_component_register_process.md  关于reader组件output_data的问题.md
test/FATE_ARCHITECTURE/FATE_config_about/: fate_config_initialization_analyze.md
test/FedCon/: README.md  fedavg_trainer.py  secure_aggregator.py
test/data/: README.md
test/data_enhancement/: CGAN.py  README.md  const.py  data_enhancement.py  psg.py
(+75 files in other folders)
